# mb-tool

./: Cargo.toml
config/: config-schema.xsd  config-schema_v2.xsd  config-u16.xml  config.xml  config_v2.xml  order.xml
src/: build_main_page.rs  device_list.rs  device_list_xml.rs  devices.rs  encoding.rs  lib.rs  main.rs  modbus_connection.rs  observable_array.rs  presentation.rs  range_array.rs  register_value.rs  tag_list.rs  tag_list_json.rs  tag_list_xhtml.rs  tag_list_xml.rs  tag_ranges.rs  tags.rs  template.rs  update_channel.rs  web_server.rs  xml_common.rs
web/: index.html  input_field.hbs  item_list.hbs  main.hbs  mb_addr.hbs  modbus.js  range_dict.js  style.css
web/templates/: bit_list  input_field  main  register_list
windows/: build_dist.bat
