[package]
name = "mb-tool"
version = "0.1.0"
edition = "2021"

[features]
default = ["webbrowser"]
openssl_vendored = ["openssl/vendored"] # Try if cross compiling fails to link openssl-sys

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
roxmltree="*"
tokio= {version="1", features=["rt-multi-thread", "net", "macros", "signal", "io-util", "sync", "time"]}
tokio-util="*"
log = "*"
hyper = {version="*", features = ["server", "runtime", "http1", "http2"]}
hyper-staticfile = "*"
form_urlencoded = "1.0"
websocket-lite = "0.5.2"
hyper-websocket-lite = "0.5.0"
websocket-codec = "0.5.2"
futures-util={version="*", features=["sink"]}
bytes="*"
tracing = "*"
tracing-subscriber = "0.3.16"
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
tokio-modbus = {version="0.17.0", default-features = false, features=["server", "tcp", "rtu", "tcp-server", "rtu-server"]}
tokio-serial = "5.4.4"
num-traits = "*"
num-bigint = "0.4"
webbrowser= {version = "0.8", optional=true}
escaper="0.1.1"
openssl={version="*"}
handlebars={version = "4.3", features=["rust-embed"]}
rust-embed={version="8.9.0", features=["include-exclude"]}

[patch.crates-io]
websocket-lite = {git = "https://github.com/1tgr/rust-websocket-lite.git"}
websocket-codec = {git = "https://github.com/1tgr/rust-websocket-lite.git"}
hyper-websocket-lite = {git = "https://github.com/1tgr/rust-websocket-lite.git"}
