[package]
name = "mb-tool"
version = "0.1.0"
edition = "2024"

[features]
default = ["webbrowser"]
openssl_vendored = ["openssl/vendored"] # Try if cross compiling fails to link openssl-sys

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
roxmltree="*"
tokio= {version="1", features=["rt-multi-thread", "net", "macros", "signal", "io-util", "sync", "time"]}
tokio-util="*"
log = "*"
hyper = {version="1.6.0", features = ["server", "http1", "http2"]}
hyper-staticfile = "*"
form_urlencoded = "1.0"
hyper-tungstenite = "0.18.0"
hyper-util="*"
websocket-codec = "0.5.2"
futures-util={version="*", features=["sink"]}
futures="*"
bytes="*"
tracing = "*"
tracing-subscriber = "0.3.16"
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
tokio-modbus = {version="0.17.0", default-features = false, features=["server", "tcp", "rtu", "tcp-server", "rtu-server"]}
tokio-serial = "5.4.4"
num-traits = "*"
num-bigint = "0.4"
webbrowser= {version = "0.8", optional=true}
escaper="0.1.1"
openssl={version="*"}
handlebars={version = "6.3.2", features=["rust-embed"]}
rust-embed={version="*", features=["include-exclude"]}
http-body-util = "0.1.3"
tungstenite = "0.27.0"

